--- a/socreport.bib
+++ b/socreport.bib
@@ -735,8 +735,8 @@
 }
 
 @inproceedings{chevallier2005distributed,
-  Author          = {Chevallier, Sylvain and Paugam-Moisy, H{\'e}l{\`e}ne and
-                  Lema{\^\i}tre, Fran{\c{c}}ois},
+  Author          = {Chevallier, Sylvain and Paugam-Moisy, H{e}l{e}ne and
+                  Lema{\i}tre, Fran{\c{c}}ois},
   Booktitle       = {Parallel and Distributed Computing and Networks},
   Date-Added      = {2020-01-31 13:47:15 +0800},
   Date-Modified   = {2020-01-31 13:47:15 +0800},
@@ -744,6 +744,18 @@
   Title           = {Distributed Processing for Modelling Real-Time Multimodal
                   Perception in a Virtual Robot.},
   Year            = 2005
+}
+
+@inproceedings{cho2014learning,
+  title           = {Learning Phrase Representations using RNN Encoder--Decoder
+                  for Statistical Machine Translation},
+  author          = {Cho, Kyunghyun and van Merri{\"e}nboer, Bart and Gulcehre,
+                  Caglar and Bahdanau, Dzmitry and Bougares, Fethi and Schwenk,
+                  Holger and Bengio, Yoshua},
+  booktitle       = {Proceedings of the 2014 Conference on Empirical Methods in
+                  Natural Language Processing (EMNLP)},
+  pages           = {1724--1734},
+  year            = 2014
 }
 
 @article{coleman2014reducing,
@@ -1633,6 +1645,18 @@
   year            = 2018,
 }
 
+@techreport{Gallego2018,
+Archiveprefix = {arXiv},
+Arxivid = {arXiv:1904.08405v1},
+Author = {Gallego, Guillermo and Delbr, Tobi and Orchard, Garrick and Bartolozzi, Chiara and Taba, Brian and Censi, Andrea and Daniilidis, Kostas and Scaramuzza, Davide and Leutenegger, Stefan and Davison, Andrew},
+Date-Added = {2020-01-30 15:56:57 +0800},
+Date-Modified = {2020-01-30 15:56:57 +0800},
+Eprint = {arXiv:1904.08405v1},
+Pages = {1--25},
+Title = {{Event-based Vision : A Survey}},
+Year = {2018}
+}
+
 @article{teka14_neuron_spike_timin_adapt_descr,
   author          = {Wondimu Teka and Toma M. Marinov and Fidel Santamaria},
   title           = {Neuronal Spike Timing Adaptation Described With a
@@ -1645,18 +1669,6 @@
   doi             = {10.1371/journal.pcbi.1003526},
   url             = {https://doi.org/10.1371/journal.pcbi.1003526},
   DATE_ADDED      = {Sun Mar 22 12:30:30 2020},
-}
-
-@techreport{Gallego2018,
-Archiveprefix = {arXiv},
-Arxivid = {arXiv:1904.08405v1},
-Author = {Gallego, Guillermo and Delbr, Tobi and Orchard, Garrick and Bartolozzi, Chiara and Taba, Brian and Censi, Andrea and Daniilidis, Kostas and Scaramuzza, Davide and Leutenegger, Stefan and Davison, Andrew},
-Date-Added = {2020-01-30 15:56:57 +0800},
-Date-Modified = {2020-01-30 15:56:57 +0800},
-Eprint = {arXiv:1904.08405v1},
-Pages = {1--25},
-Title = {{Event-based Vision : A Survey}},
-Year = {2018}
 }
 
 @article{thorpe2001spike,
@@ -1792,6 +1804,13 @@ Year = {2018}
   primaryClass    = {cs.NE},
 }
 
+@phdthesis{schulman2016optimizing,
+  title={Optimizing expectations: From deep reinforcement learning to stochastic computation graphs},
+  author={Schulman, John},
+  year={2016},
+  school={UC Berkeley}
+}
+
 @article{zenke17_super,
   author          = {Zenke, Friedemann and Ganguli, Surya},
   title           = {Superspike: Supervised Learning in Multi-Layer Spiking
@@ -1825,13 +1844,6 @@ Year = {2018}
   archivePrefix   = {arXiv},
   eprint          = {1705.11146},
   primaryClass    = {q-bio.NC},
-}
-
-@phdthesis{schulman2016optimizing,
-  title={Optimizing expectations: From deep reinforcement learning to stochastic computation graphs},
-  author={Schulman, John},
-  year={2016},
-  school={UC Berkeley}
 }
 
 @inproceedings{zhu2018ev,
